made note search form a constant width to prevent getting squished on mobile interface

--- a/app/assets/stylesheets/rambles.css.scss
+++ b/app/assets/stylesheets/rambles.css.scss
@@ -338,11 +338,11 @@ a.edit-note, a.delete-note {
 @media (max-width: 480px) {
   #note-search-title {
     font-size: 40px;
-    padding: 180px 0 20px 0;
+    padding: 180px 0 10px 0;
   }
 }
 input#search.span2 {
-  width: 30%;
+  width: 300px;
   margin: 0 auto;
   border-radius: 20px;
   border: 4px solid $orange;
